# white-room

./: .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
adapters/: __init__.py  anthropic_compatible.py  base.py  cloud_shared.py  codex_lb.py  groq_cloud.py  lmstudio_local.py  manual_claude.py  ollama_local.py  openai_compatible.py  provider_specific.py
cli/: __init__.py  chat_cmd.py  endpoint_cmd.py  export_project_cmd.py  health_cmd.py  main.py  orchestrate_cmd.py  project_cmd.py  reindex_cmd.py  route_cmd.py  usage_cmd.py
core/: __init__.py  agents.py  approvals.py  bench.py  chat.py  chat_format.py  codex_lane.py  codex_modes.py  db.py  endpoints.py  escalation.py  health.py  home.py  http_client.py  http_local.py  manual_lane.py  memory.py  models_catalog.py  onboarding.py  orchestrator.py  packets.py  projects.py  providers.py  reindex.py  route_log.py  router.py  secrets.py  templates_loader.py  ui_preferences.py  usage.py
docs/: ARCHITECTURE.md  DEMO_PHASE14.md  DEMO_PHASE14B.md  DEMO_SCRIPT.md  INSTALL.md  LOCAL_PRODUCTION.md  PLAYBOOK.md  PRODUCT_TOUR.md  PROVIDERS.md  PUBLIC_RELEASE.md  RELEASE.md  SECURITY_MODEL.md  WORKFLOWS.md
scripts/: bootstrap_demo.py  create_public_snapshot.ps1  doctor.py  run_local.ps1  run_local.sh  secret_scan.py  verify_release.py
tests/: conftest.py  test_cloud_gates.py  test_codex_lane.py  test_codex_lb.py  test_codex_lb_modes.py  test_groq_cloud.py  test_health_sync.py  test_openai_core.py  (+31 more)
(+91 files in other folders)
